# doraemon-box

./: .editorconfig  .gitignore  .markdownlint.json  .markdownlintignore  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  mise.toml
.agents/: MEMORY.md  config.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml
docs/: README.md  architecture.md  basic-design.dio  plan.md  project-design.md  requirements.md  setup.md  status.md  todo.md
dokodemo-door/: Cargo.toml  README.md
dokodemo-door/migrations/postgres/: 0001_init.sql  0002_tags_and_categories.sql
dokodemo-door/migrations/sqlite/: 0001_init.sql  0002_tags_and_categories.sql
dokodemo-door/sql/: 001_init.sql  dokodemo-schema.sql
dokodemo-door/src/: auth.rs  config.rs  db.rs  error.rs  helpers.rs  lib.rs  main.rs  models.rs  prelude.rs  routes.rs
dokodemo-door/src/db/: mod.rs  postgre.rs  postgres.rs  sqlite.rs
dokodemo-door/src/handlers/: category.rs  entry.rs  mod.rs  tag.rs
takekoputaa/: README.md
