[package]
name = "dokodemo-door"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"

# database
sqlite3 = "0.24"
sqlx = "0.7"

# web & runtime
axum = "0.6"
tokio = { version = "1.29", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.4", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tower-layer = "0.3"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
