[package]
name = "dokodemo-door"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"

# database

sqlx = "0.7"

# runtime
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# for local dev, maybe singleton deployment?
sqlite3 = "0.24"
