[package]
name = "dokodemo-door"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"

# database
# sqlite3 = "0.24"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }

# web & runtime
axum = "0.6"
tokio = { version = "1.33", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.4", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tower-layer = "0.3"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
